adding Jena using POM in notebook cell

--- a/Java Notebooks/HelloWorld.ipynb
+++ b/Java Notebooks/HelloWorld.ipynb
@@ -6,10 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "System.out.println(\"Hello stdout!\");\n",
-    "System.err.println(\"Hello stderr!\");\n",
-    "\n",
-    "\"Hello Out!\";"
+    "%%loadFromPOM;\n",
+	"<dependency>;\n",
+    "	<groupId>org.apache.jena</groupId>;\n",
+    "	<artifactId>apache-jena-libs</artifactId>;\n",
+    "	<type>pom</type>;\n",
+    "	<version>3.11.0</version>;\n",
+	"</dependency>;\n"
    ]
   }
  ],
